@@ -6,6 +6,7 @@ Revision history for Dist-Build
           - Remove curdir and inc/ from automatic include paths in Dist::Build::XS
           - Allow file to be specified instead of module in Dist::Build::XS
           - Allow sources to be a hash in Dist::Build::XS
+          - Extract script logic module out of base module
 
 0.007     2024-07-20 15:19:09+02:00 Europe/Brussels
           - Properly depend on new ExtUtils::Builder::Compiler
